Core dump after opening generated docbook file from doxygen
- After generating docbook output from doxygen, I try to open it with yelp, it opens only few files , index.xml , but when I try to go with link that is in index.xml , it crashes.
- My yelp version is: 3.4.0
- Also doxygen version is latest..
- I do not understand why can XMLmind open that file but yelp can not.
- Issues and warning below in Xmlmind logs .. -> =================================================================================================[1]first occurrence of ID "_classproximus_1_1tlm__components_1_1wire__tac__counter_1a94a1127dec9f4e5acee0d467f519ab70" [2] ID "_classproximus_1_1tlm__components_1_1wire__tac__counter_1a94a1127dec9f4e5acee0d467f519ab70" has already been defined [3] unfinished element [4] element "section" from namespace "http://docbook.org/ns/docbook" not allowed in this context [5] IDREF "_tlm__2-2_83__profile_2wire__tac__counter_8hpp_source_1l00035" without matching ID [6] IDREF "_tlm__2-2_83__profile_2wire__tac__counter_8hpp_source" without matching ID [7] element "section" from namespace "http://docbook.org/ns/docbook" not allowed in this context [8] element "para" from namespace "http://docbook.org/ns/docbook" not allowed in this context [9] IDREF "_tlm__2-2_83__profile_2wire__tac__counter_8hpp_source_1l00041" without matching ID [10] IDREF "_tlm__2-2_83__profile_2wire__tac__counter_8hpp_source" without matching ID [11]element "para" from namespace "http://docbook.org/ns/docbook" not allowed in this context [12]element "link" from namespace "http://docbook.org/ns/docbook" not allowed in this context [13] IDREF "_tlm__2-2_83__profile_2wire__tac__counter_8hpp" without matching ID
===================================================================================================
- To reproduce error open this example attached belowexample.tar.gz , open docbook directory, try to open docbook files with yelp and then try to open it with XMLmind..
Edited by Anton