Fix crashes from setting automatic IDs in DocBook 5 documents

Fixes https://gitlab.gnome.org/GNOME/yelp/-/issues/148